# llm

./: .gitignore  .gitmodules  Cargo.toml
binaries/llm-cli/: Cargo.toml
binaries/llm-cli/src/: cli_args.rs  main.rs
binaries/parse_bin/: Cargo.toml
binaries/parse_bin/src/: main.rs
crates/ggml/: Cargo.toml
crates/ggml/src/: context.rs
crates/ggml/sys/: Cargo.toml  build.rs
crates/ggml/sys/src/: lib.rs  llama.rs
crates/llm-base/src/: loader.rs
crates/models/gpt2/: Cargo.toml
crates/models/gpt2/src/: lib.rs
crates/models/llama/: Cargo.toml
crates/models/llama/src/: lib.rs
crates/rust_utils/: Cargo.toml  bindings.h  build.rs
crates/rust_utils/src/: lib.rs
