[package]
name = "parse_bin"
version = "0.1.0"
edition = "2021"
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_utils = { path = "../../crates/rust_utils" }
bincode = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
clap.workspace = true
