[package]
name = "ggml-sys"
version = "0.2.0-dev"
repository = { workspace = true }
edition = "2021"
description = "Raw bindings (i.e. bindgen output) for the ggml library."
license = "MIT"

[dependencies]

[build-dependencies]
cc = "^1.0"
cmake = "0.1.50"
[features]
cublas = []
clblast = []
metal = []
